--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,8 @@ dist-ssr
 # Editor directories and files
 .vscode/*
 .kiro/steering
+.qoder/*
+.qoder
 !.vscode/extensions.json
 .idea
 .DS_Store
@@ -24,3 +26,4 @@ dist-ssr
 *.sln
 *.sw?
 .env
+.qoder/rules/rules.md
