--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
+    "build:analyze": "npm run build && node scripts/analyze-bundle.js",
     "lint": "eslint .",
     "preview": "vite preview",
     "test": "vitest",
@@ -31,6 +32,7 @@
     "@vitejs/plugin-react": "^4.3.1",
     "@vitest/ui": "^3.2.4",
     "autoprefixer": "^10.4.18",
+    "cssnano": "^7.1.1",
     "eslint": "^9.9.1",
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.11",
@@ -38,9 +40,11 @@
     "jsdom": "^27.0.0",
     "postcss": "^8.4.35",
     "tailwindcss": "^3.4.1",
+    "terser": "^5.44.0",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.3.0",
     "vite": "^7.1.7",
+    "vite-plugin-compression": "^0.5.1",
     "vitest": "^3.2.4"
   }
 }
